-  style(components): refactor Feature component styles for better readability and consistency -  fix(components): update import path for Question component in FAQs component -  refactor(components): simplify conditional class assignment in Plan component -  refactor(components): rename Question component file to Home/Question -  style(css): improve responsive design for Feature component -  style(css): adjust styling for images in index.css

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -35,11 +35,13 @@
 		@apply dark:text-blue-400 text-blue-600 transition-colors duration-[250ms];
 	}
 	.plan {
-		@apply bg-gray-900 cursor-pointer relative z-0 flex flex-col items-center p-8 border rounded-md dark:bg-gray-900;
+		@apply bg-gray-900 cursor-pointer relative z-0 flex flex-col items-center p-8 border rounded-md dark:bg-gray-900 w-fit px-14;
+		align-self: normal !important;
 	}
 
 	.activePlan {
-		@apply bg-gray-900 cursor-pointer relative flex flex-col items-center p-8 border-2 rounded-md dark:border-blue-300 dark:bg-gray-900;
+		@apply bg-gray-900 cursor-pointer relative flex flex-col items-center p-8 border-2 rounded-md dark:border-blue-300 dark:bg-gray-900 scale-100 lg:scale-110 sm:scale-100 w-fit px-14;
+		align-self: normal !important;
 	}
 
 	.planBtn {
@@ -67,7 +69,17 @@
 			padding-right: 2.5rem;
 		}
 	}
+
 	@media (max-width: 1242px) {
+
+		#plans{
+			margin-bottom: 1.2rem;
+		}
+
+		.Question{
+			font-size: 1rem;
+		}
+
 		.PlansHolder {
 			grid-template-columns: repeat(1, minmax(0, 1fr)) !important;
 			margin-top: 0 !important;
@@ -79,6 +91,56 @@
 
 		.PlansTitle {
 			margin-bottom: 0.5rem !important;
+		}
+	}
+
+	@media (max-width: 1131px) {
+		.FeatureImg {
+			border-top-left-radius: 0.375rem !important;
+			border-top-right-radius: 0.375rem !important;
+			border-bottom-left-radius: 0 !important;
+			border-bottom-right-radius: 0 !important;
+			max-width: 100% !important;
+			align-self: normal !important;
+		}
+
+		.FeatureBody {
+			border-top-right-radius: 0 !important;
+			border-top-left-radius: 0 !important;
+			border-bottom-left-radius: 0.375rem !important;
+			border-bottom-right-radius: 0.375rem !important;
+		}
+		.FeatureBody h3 {
+			font-size: 1.2rem;
+			font-weight: bold;
+		}
+
+		.FeatureHolder,
+		.FeatureBody {
+			padding-left: 0 !important;
+			padding-right: 0 !important;
+			flex-direction: column !important;
+			place-items: center !important;
+			place-content: center;
+		}
+	}
+
+	@media (max-width: 640px) {
+
+		.FeatureBody p{
+			line-height: 1.7 !important;
+		}
+
+		.FeatureBody p.Y {
+			margin-top: 0.6rem;
+			margin-bottom: 1rem;
+		}
+		.FeatureBody p.T {
+			margin-top: 0.6rem;
+		}
+
+		.FeatureBody{
+			width: 90% !important;
 		}
 	}
 }
@@ -98,4 +160,14 @@ a {
 .blend-normal {
 	mix-blend-mode: normal;
 	display: block;
+}
+
+img {
+	max-width: 100%;
+	height: auto;
+	vertical-align: middle;
+	font-style: italic;
+	background-repeat: no-repeat;
+	background-size: cover;
+	shape-margin: 1rem;
 }
